# flask-websocket-chat

./: .dockerignore  .env.sample  LICENSE  pyproject.toml
flask-websocket-chat/: __init__.py
websocket_chat/: __init__.py  app.py  config.py
