[tool.poetry]
name = "flask-websocket-chat"
version = "0.1.0"
description = ""
authors = ["HEKUCHAN <heitorhirose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
