[tool.poetry]
name = "flask-websocket-chat"
version = "0.1.0"
description = ""
authors = ["HEKUCHAN <heitorhirose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
yarl = "^1.9.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
